Fix dragging issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="pixel-board"></div>
-    <button id="reset-button">RESET</button>
+    <div class="menu">
+        <button id="reset-button">RESET</button>
+    </div>
+    
 </body>
 
 </html>
